[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/themeTresent.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=2]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 303.0
margin_top = 168.0
margin_right = 398.0
margin_bottom = 182.0
theme = ExtResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Ninja of Flatland"

[node name="Start" type="Button" parent="."]
margin_left = 299.0
margin_top = 233.0
margin_right = 394.0
margin_bottom = 253.0
theme = ExtResource( 1 )
text = "Start The Story"

[node name="Prologue" type="Label" parent="."]
margin_left = 44.0
margin_top = 40.0
margin_right = 498.0
margin_bottom = 186.0
theme = ExtResource( 1 )
text = "You are a ninja who swear to avenge his family. After they were killed by assassins from the leader of the nation. 
Ever since you swear to cut off his head and free the nation from his hand.

The leaders have heard about your plan and sent more assassins to finish the job.

DODGE THE PROJECTILES"
autowrap = true
percent_visible = 0.0

[node name="TimePerLetter" type="Timer" parent="."]
wait_time = 0.1

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 518.0
margin_top = 426.0
margin_right = 601.0
margin_bottom = 446.0
text = "Skip"

[connection signal="ready" from="Title" to="." method="_on_Title_ready"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="ready" from="Prologue" to="." method="_on_Prologue_ready"]
[connection signal="timeout" from="TimePerLetter" to="." method="_on_TimePerLetter_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
